Fix contrast bug on colors

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,7 +7,7 @@
     --hover: #00000015;
     --primary: #ffb200;
     --secondary: #000000;
-    --primary_2: #ea5c2b;
+    --primary_2: #d13500;
     --glass: #ffffff99;
 }
 
@@ -20,14 +20,14 @@
 
 body.dark {
     --background: #111;
-    --background_2: #060606;
+    --background_2: #111;
     --text: white;
     --text_2: #ddd;
     --gray: #999;
-    --hover: #ffffff15;
+    --hover: #ffffff18;
     --primary: #ffb200;
     --secondary: #ffffff;
-    --primary_2: #ffb200;
+    --primary_2: #ffb70e;
     --glass: #11111199;
 }
 
@@ -37,9 +37,15 @@ body {
 
 h1,
 h2,
-h3 {
-    font-weight: 800;
+h3,
+h4,
+h5,
+h6 {
     color: var(--text);
+}
+
+h1 {
+    font-size: 2rem;
 }
 
 p {
